# taskproof

./: README.md  package-lock.json  package.json
.github/workflows/: ci.yml
contracts/: Cargo.toml
contracts/ed25519-dalek-patch/: Cargo.toml
contracts/ed25519-dalek-patch/src/: lib.rs
contracts/registry/: Cargo.toml
contracts/registry/src/: lib.rs
contracts/task/: Cargo.toml
contracts/task/src/: lib.rs
contracts/task/test_snapshots/: test_contract_flow.1.json
contracts/task/tests/: integration_tests.rs
docs/: ARCHITECTURE.md
frontend/: index.html  package.json  tailwind.config.js
frontend/coverage/: clover.xml  index.html
frontend/src/: config.json
frontend/src/__tests__/: dapp.test.ts
frontend/src/app/: App.tsx
frontend/src/contexts/: EventContext.tsx  SidebarContext.tsx  TaskContext.tsx  ThemeContext.tsx  (+2 more)
scripts/: deploy.js  interact.js
stitch_taskproof_pastel_workspace/analytics_transactions/: code.html
stitch_taskproof_pastel_workspace/deployment_testing_dashboard/: code.html
stitch_taskproof_pastel_workspace/event_stream_monitor/: code.html
stitch_taskproof_pastel_workspace/proof_registry_explorer/: code.html
stitch_taskproof_pastel_workspace/shader/: code.html
stitch_taskproof_pastel_workspace/taskproof/: DESIGN.md
stitch_taskproof_pastel_workspace/taskproof_contracts/: code.html
stitch_taskproof_pastel_workspace/taskproof_dashboard/: code.html
stitch_taskproof_pastel_workspace/taskproof_landing_page/: code.html
stitch_taskproof_pastel_workspace/taskproof_mobile_dashboard/: code.html
tests/: integration.test.js
(+28 files in other folders)
