[package]
name = "ed25519-dalek"
version = "3.0.0"
edition = "2021"

[dependencies]
real-dalek = { package = "ed25519-dalek", version = "=2.2.0", default-features = false }
signature = { version = "2.2.0", default-features = false }
rand_core = { version = "0.6.4", default-features = false }

[features]
default = []
rand_core = []
